--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
      <h1 id="header">HEADER</h1>
 
      <div class="flex-container">
-        <div><a href=""><img class="movie" src="./imgs/movie.jpg"><div class="movietitle">Movie Title</div></a></div>
-        <div><a href=""><img class="movie" src="./imgs/movie.jpg"><div class="movietitle">Movie Title</div></a></div>
-        <div><a href=""><img class="movie" src="./imgs/movie.jpg"><div class="movietitle">Movie Title</div></a></div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle">Movie Title</div>
+            </a>
+        </div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle">Movie Title</div>
+            </a>
+        </div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle">Movie Title</div>
+            </a>
+        </div>
      </div>
 
- </body>   
+ </body>
 </html>
