incase movie title in p element

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
      <div class="flex-container">
         <div>
             <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle">Movie Title</div>
+                <div class="movietitle"><p>Movie Title</p></div>
             </a>
         </div>
         <div>
             <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle">Movie Title</div>
+                <div class="movietitle"><p> Movie Title</p></div>
             </a>
         </div>
         <div>
             <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle">Movie Title</div>
+                <div class="movietitle"><p>Movie Title</p></div>
             </a>
         </div>
      </div>
