--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
  <body>
      <h1 id="header">HEADER</h1>
 
+     <div class="flex-container grey">
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle"><p>Movie Title</p></div>
+            </a>
+        </div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle"><p> Movie Title</p></div>
+            </a>
+        </div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle"><p>Movie Title</p></div>
+            </a>
+        </div>
+     </div>
      <div class="flex-container">
         <div>
             <a href=""><img class="movie" src="./imgs/movie.jpg">
@@ -25,6 +42,22 @@
             </a>
         </div>
      </div>
-
+     <div class="flex-container grey">
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle"><p>Movie Title</p></div>
+            </a>
+        </div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle"><p> Movie Title</p></div>
+            </a>
+        </div>
+        <div>
+            <a href=""><img class="movie" src="./imgs/movie.jpg">
+                <div class="movietitle"><p>Movie Title</p></div>
+            </a>
+        </div>
+     </div>
  </body>
 </html>
