--- a/index.html
+++ b/index.html
@@ -24,40 +24,12 @@
                 <div class="movietitle"><p>Movie Title</p></div>
             </a>
         </div>
-     </div>
-     <div class="flex-container">
-        <div>
-            <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle"><p>Movie Title</p></div>
-            </a>
-        </div>
-        <div>
-            <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle"><p> Movie Title</p></div>
-            </a>
-        </div>
-        <div>
-            <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle"><p>Movie Title</p></div>
-            </a>
-        </div>
-     </div>
-     <div class="flex-container grey">
-        <div>
-            <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle"><p>Movie Title</p></div>
-            </a>
-        </div>
-        <div>
-            <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle"><p> Movie Title</p></div>
-            </a>
-        </div>
-        <div>
-            <a href=""><img class="movie" src="./imgs/movie.jpg">
-                <div class="movietitle"><p>Movie Title</p></div>
-            </a>
-        </div>
-     </div>
+    </div>
+    <div class="flex-container2">
+            <div><a href=""><img class="movie" src="./imgs/movie.jpg">
+                    <footer>Movie Title</footer>    
+                </a>
+            </div>
+    </div>
  </body>
 </html>
