create img card with footer element for movie title

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         </div>
     </div>
     <div class="flex-container2">
-            <div><a href=""><img class="movie" src="./imgs/movie.jpg">
-                    <footer>Movie Title</footer>    
-                </a>
+            <div><a href=""><img class="movie" src="./imgs/movie.jpg"><footer>Movie Title</footer></a>
             </div>
     </div>
  </body>
